--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: darkgray;
+    height: 640px;
 }
 
 canvas {
@@ -11,5 +12,6 @@ canvas {
 }
 
 #overlapping canvas{
-    margin: -600px 0 0 0;
+    margin: -640px 0 0 0;
+    height: 640px;
 }
